fixed spacing issues. Might want to not center notif elements

--- a/frontend/src/assets/css/adminNotif.css
+++ b/frontend/src/assets/css/adminNotif.css
@@ -1,41 +1,71 @@
-.admin-notif-text{
-    background-color: #E6E6E6;
-    padding-left: 5%;
-    padding-top: 5%;
-    padding-right: 5px;
-    display: flex;
-
-    justify-content: space-around;
-    flex-direction: row;
-    align-content: flex-start;
+.admin-notif-container{
+    /* display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
     align-items: center;
     grid-area: card;
     flex-wrap: wrap;
     height: fit-content;
-    /* min-height: 100%; */
+    min-height: 100%;
+    width: 100%; */
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items:flex-start;
+    grid-area: card;
+    flex-wrap: wrap;
+    height: fit-content;
+    min-height: 100%;
 }
+
+
+.admin-notif-element{
+    /* padding: 5%;
+    padding-right: 5%;
+    display: flex;
+
+    justify-content: space-around;
+    flex-direction: row;
+    align-content:center;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 70px;
+    width: 100%;
+    margin: 0%; */
+
+
+    width: 100%;
+    height: 70px;
+    border-bottom: solid var(--UcrBlue) 0px;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+    justify-self: start;
+    /* overflow-wrap:normal; */
+    /* height:fit-content; */
+}
+.admin-notif-element:nth-child(odd){
+    background-color: var(--Grey);
+}
+.admin-notif-element:nth-child(even){
+    background-color: var(--White);
+}
+
 .profColumn{
     width: 25%;
     text-align: center;
 
 }
 .room-column{
-    /* margin-left: 10px; */
     width: 25%;
     text-align: center;
     font-family: 'Oswald';
     color: #000000;
 }
 .sched-column{
-    /* margin-left: 10px; */
     width: 25%;
     text-align: center;
 }
-/* .admin-notif-text:after {
-    content: "";
-    display: table;
-    clear: both;
-} */
 
 .check-button{
     background-color: #27C100;
@@ -43,7 +73,6 @@
     height: 30px;
     width: 30px;
     margin: 10px;
-    /* margin-right: 10px; */
 }
 
 .mail-button{
@@ -52,8 +81,6 @@
     height: 30px;
     width: 30px;
     margin: 10px;
-    /* margin-left: 10px;
-    margin-right: 10px; */
 }
 
 .reject-button{
@@ -62,21 +89,13 @@
     height: 30px;
     width: 30px;
     margin: 10px;
-    /* margin-left: 10px; */
-    /* margin-right: 10px; */
 }
 
 .admin-notif-buttons{
-    /* margin-right: 0px; */
-    /* padding-right: 0px; */
     display: flex;
-    /* right: 0%; */
     vertical-align: middle;
-    /* align-content: center; */
-    /* justify-content: space-around; */
+    justify-content: space-around;
     align-items: center;
-    align-content: space-around;
+    /* flex-wrap: nowrap; */
     width: 25%;
-    
-    grid-area: card;
 }
